_sass/custom.scss
.card-img-top.team-member-image {
  height: 287px;
  width: 100%;
  object-fit: cover;
  background-repeat: no-repeat;
  background-position: top;
}

.image-column {
  min-width: 18rem;
}

.me-18-rem {
  width: 18rem;
}

.circle-img {
  height: 100px;
  width: 100px;
  border-radius: 100%;
  background-size: cover;
  background-position: top;
}

.event-card {
  border: 1px solid rgba(0, 0, 0, 0.125);
  border-radius: 0.25rem;

  .card-body {
    padding: 0.75rem;
    background-color: #fff;
  }
}

.mx-w-600 {
  max-width: 600px;
}

.intro {
width: 100%;
min-height: 40em;
margin: auto;
margin-top: 20px;
background-image: url("/assets/images/fuleventimg/FUL Event 2.jpg");
background-size: cover;
background-position: center;
background-repeat: no-repeat;
}

.vision-section {
  background-color: rgba(255, 255, 255, 0.90);
  padding: 40px 80px 40px 80px;
  border-radius: 25px;
  margin-top: 40em;
  margin-bottom: 0px;
  box-shadow: 2.5px 4.33px 15px 0px rgb(43, 28, 0);
}


.vision_title {
  z-index: 2;
}


.vision-text {
  color: #000;
}

#about{
	background-color: #000;
	padding:50px;
}
#ful-logo {
	width: 400px;
	height: auto;
}

.about-us-title {
	color: #fff;
	text-shadow: -1px 1px 2px #000;
}
.about-us-section {
	color: #fff;
}


.value_img_box {
max-width: 500px;
display: block;
height: 300px;
object-fit: cover;
box-shadow: 2.5px 4.33px 15px 0px #000;
}

.mobileheader_logo {
  width: 80px;
	height: 100%;
}

